Wed Dec 16 11:26:30 UTC 2009  Denis Budko  <denis.budko@remedy.nl>

        * orbsvcs/tests/Notify/Ordering/run_test.pl:

          Fuzz fix.

Tue Dec 15 12:20:00 UTC 2009  Martin Corino  <mcorino@remedy.nl>

        * tests/OBV/Supports/server.cpp:
          Fuzz fix.

Mon Dec 14 15:13:30 UTC 2009  Denis Budko  <denis.budko@remedy.nl>

        * orbsvcs/tests/Simple_Naming/run_test_ipv6.pl:
        * orbsvcs/tests/Simple_Naming/run_test.pl:
        * orbsvcs/tests/Redundant_Naming/run_test.pl:
        * orbsvcs/tests/Bug_1437_Regression/run_test.pl:
        * orbsvcs/examples/ImR/Combined_Service/run_test.pl:

          Tests are converted to use new test framework
          and added to fuzz build.

Mon Dec 14 14:52:39 UTC 2009  Abdul Sowayan  <sowayan@gmail.com>

        * NEWS:

          Updated to note iPhone/iPod Touch support.

Mon Dec 14 14:50:00 UTC 2009  Martin Corino  <mcorino@remedy.nl>

        * tests/OBV/Supports/server.cpp:
        * tests/OBV/Supports/Supports_Test_impl.cpp:
          Fixed faulty shutdown code causing server crashes.

Mon Dec 14 13:58:58 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_component/context_svh.cpp:
        * TAO_IDL/be/be_visitor_component/context_svs.cpp:
        * TAO_IDL/be/be_visitor_component/servant_svh.cpp:
        * TAO_IDL/be/be_visitor_component/servant_svs.cpp:
          Simplified generated code

Mon Dec 14 07:26:58 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Exposed_Policies/RT_Properties.{h,cpp}:
          Fixed unicode runtime problems

Fri Dec 11 18:27:58 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Makefile.am:
          Removed all duplicated files

Fri Dec 11 16:36:58 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * tao/Valuetype/ValueBase.h:

          Removed explicit type specification for indirection flag to
          fix implicit constant conversion overflow warning.
